--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example rounded-2" tabindex="0">
     <header>
-        <nav id="navbar-example2" class="navbar fixed-top px-3 mb-3 bg-white border-bottom border-oxford">
-            <p class="nav-title">MindPad</p>
-            <ul class="nav nav-pills">
+        <nav id="navbar-example2" class="navbar fixed-top px-3 mb-3 bg-white border-bottom">
+            <p class="nav-title navbar-brand align-items-center m-0 pt-1 pb-0 lh-1">MindPad</p>
+            <ul class="nav nav-pills fs-5">
                 <li class="nav-item "><a href="#scrollspyHeading1" class="nav-link active">Home</a></li>
                 <li class="nav-item "><a href="#scrollspyHeading2" class="nav-link ">Write</a></li>
                 <li class="nav-item "><a href="#scrollspyHeading3" class="nav-link">Pad</a></li>
