--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section aria-label="write a PadPost section" class="write-section d-flex flex-column gap-4">
             <h2 id="scrollspyHeading2" class="px-5">Write a PadPost:</h2>
             <div class="formAndIdeas d-flex flex-row justify-content-center gap-5 px-5 pb-5">
-                <form id="createForm" class="d-flex flex-column w-50">
+                <form id="createForm" class="d-flex flex-column w-50 p-3 rounded-4">
                     <div class="row mb-3">
                         <label for="createTitle" class="col-3 col-form-label">Add a Title</label>
                         <div class="col-9">
@@ -56,7 +56,7 @@
                 </form>
                 <div class="d-flex flex-column gap-3">
                     <h3>Need Ideas?</h3>
-                    <ul id="ideasList" class="list-group list-group-flush">
+                    <ul id="ideasList" class="list-group list-group-flush d-flex flex-column gap-2">
                         <li class="list-group-item">My day was...</li>
                         <li class="list-group-item">I recently tried (insert food) and...</li>
                         <li class="list-group-item">One activity I did today was...</li>
