fix(button): fix alignment for button on smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             Please add content to your PadPost!
                         </div>
                     </div>
-                    <button type="submit" id="postButton" class="btn btn-outline-success px-5 py-2 fs-5 w-50 align-self-center">Post</button>
+                    <button type="submit" id="postButton" class="btn btn-outline-success fs-5 w-50 d-flex justify-content-center align-self-center">Post</button>
                 </form>
                 <!-- Post Ideas Section -->
                 <div class="d-flex flex-column gap-3">
