--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@100..900&family=Sono:wght@200..800&display=swap" rel="stylesheet">
     <!-- bootstrap stylesheet CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- bootstrap icons stylesheet -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!-- app stylesheet -->
     <link rel="stylesheet" href="./style.css">
     <!-- bootstrap/popper script CDN -->
@@ -78,10 +80,26 @@
             <img src="./assets/Mask group 09 grainy-greenseed.svg" class="deco deco-seed opacity-100" alt="decorative green seed shape"> 
             <img src="./assets/Mask group 16 grainy-yellowgrape.svg" class="deco deco-grape opacity-75" alt="decorative orange grape shape">
         </section>
+
+        <!-- PadPosts section -->
         <section aria-label="your PadPosts section">
-            <h2 id="scrollspyHeading3">Your PadPosts:</h2>
+            <h2 id="scrollspyHeading3" class="px-5 g-5">Your PadPosts:</h2>
             <hr>
-            <div id="padPostGrid" class="row"></div>
+            <div id="padPostGrid" class="row p-3 mx-5 gx-4 gy-5">
+                <!-- template for cloning -->
+                <div class="col-4">
+                    <div id="templatePost" class="d-flex flex-column gap-2 p-3 rounded-4">
+                        <div class="padPostDate"></div>
+                        <div class="d-flex flex-row justify-content-between">
+                            <label for="templateTitle" class="col-3 col-form-label">Title</label>
+                            <button class="editButton btn btn-warning fs-6 fw-medium"><i class="bi bi-pencil fw-bolder"></i> Edit</button>
+                        </div>
+                        <input id="templateTitle" class="templateTitle form-control" readonly>
+                        <label for="templateContent">PadPost Content</label>
+                        <textarea id="templateContent" class="templateContent form-control" rows="6" readonly></textarea>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
