--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
             <hr>
             <div id="padPostGrid" class="row p-3 mx-5 gx-4 gy-5">
                 <!-- template for cloning -->
-                <div class="col-4">
-                    <div id="templatePost" class="d-flex flex-column gap-2 p-3 rounded-4">
+                <div id="templatePost" class="col-4">
+                    <div class="templatePost d-flex flex-column gap-2 p-3 rounded-4">
                         <div class="padPostDate"></div>
                         <div class="d-flex flex-row justify-content-between">
                             <label for="templateTitle" class="col-3 col-form-label">Title</label>
                             <button class="editButton btn btn-warning fs-6 fw-medium"><i class="bi bi-pencil fw-bolder"></i> Edit</button>
                         </div>
-                        <input id="templateTitle" class="templateTitle form-control" readonly>
+                        <input id="templateTitle" class="padPostTitle form-control" readonly>
                         <label for="templateContent">PadPost Content</label>
-                        <textarea id="templateContent" class="templateContent form-control" rows="6" readonly></textarea>
+                        <textarea id="templateContent" class="padPostContent form-control" rows="6" readonly></textarea>
                     </div>
                 </div>
             </div>
