--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <hr>
             <div id="padPostGrid" class="row p-3 mx-5 gx-4 gy-5">
                 <!-- template for cloning -->
-                <div id="templatePost" class="col-4">
+                <div id="templatePost" class="d-none col-4">
                     <div class="templatePost d-flex flex-column gap-2 p-3 rounded-4">
                         <div class="padPostDate"></div>
                         <div class="d-flex flex-row justify-content-between">
