feat(delete post): add delete button to template

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                         <input id="templateTitle" class="padPostTitle form-control" readonly>
                         <label for="templateContent">PadPost Content</label>
                         <textarea id="templateContent" class="padPostContent form-control" rows="6" readonly></textarea>
+                        <!-- delete button -->
+                        <button class="deleteButton btn btn-sm btn-danger w-25 align-self-end"><i class="bi bi-trash3"></i> Delete</button>
                     </div>
                 </div>
             </div>
