--- a/index.html
+++ b/index.html
@@ -98,11 +98,30 @@
                         <label for="templateContent">PadPost Content</label>
                         <textarea id="templateContent" class="padPostContent form-control" rows="6" readonly></textarea>
                         <!-- delete button -->
-                        <button class="deleteButton btn btn-sm btn-danger w-25 align-self-end"><i class="bi bi-trash3"></i> Delete</button>
+                        <button class="deleteButton btn btn-sm btn-danger w-25 align-self-end" data-bs-toggle="modal" data-bs-target="#deletePostModal"><i class="bi bi-trash3"></i> Delete</button>
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- delete padPost confirmation modal -->
+        <div class="modal fade" id="deletePostModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete PadPost</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Sure you want to delete this PadPost? This action cannot be undone.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="bi bi-arrow-left"></i> No, Take me Back</button>
+                    <button id="confirmDeleteButton" type="button" class="btn btn-danger" data-bs-dismiss="modal"><i class="bi bi-trash3"></i> Yes, Delete PadPost</button>
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
 </body>
 </html>
